--- a/ecogenomiquerdossier.Rmd
+++ b/ecogenomiquerdossier.Rmd
@@ -119,11 +119,114 @@ plotQualityProfile(fnRs[1:2])
 
 ````{r}
 
-We define the filenames for the filtered fastq.gz files:
+#We define the filenames for the filtered fastq.gz files:
 
+  #on creer un path filtered
+  # on le met dans filtered/ subdirectory
+filt_path <- file.path(miseq_path, "filtered") # "filtered" est le nouv endroit ou ya. nos objet
+if(!file_test("-d", filt_path)) 
+  dir.create(filt_path)
+  #le -d correspond à un element du file path
+  # si file_test n'est pas -d et dans le filtered path, alors dir.create provide a low-level
+  #interface to the computer's file system.
 
-
-
+filtFs <- file.path(filt_path, paste0(sampleNames, "_F_filt.fasta.gz")) #filtered path pour les fowards, on cherche le filtered path et on trie par le nom du sample
+filtRs <- file.path(filt_path, paste0(sampleNames, "_R_filt.fastq.gz"))
 ````
 
+````{r}
+# combine trimming parameters with standard filtering parameters
+
+# Filter the forward and reverse reads:
+# on utilise filter and tim
+# cette fonction prend une fichier fastq suivant certain critère def et contient les reads trimmed
+# en imput on met les files de reverse et foward
+# dans ce cas le filtering is performed on the forward and reverse reads independently, and both reads must pass for the read pair to be output.
+
+
+out <- filterAndTrim(fnFs, filtFs, fnRs, filtRs, truncLen=c(240,160),
+              maxN=0, maxEE=c(2,2), truncQ=2, rm.phix=TRUE,
+              compress=TRUE, multithread=TRUE) 
+# out filte et compresse tous ca dans le fichier
+
+# On Windows set multithread=FALSE
+head(out)
+````
+
+
+````{r}
+# Infer sequence variants
+
+  #  high-resolution DADA2 method
+  # --> infer amplicon sequence variants (ASVs) 
+  # name the resulting "derep-class" objects by their sample name.
+
+
+# Dereplication
+# la fonction de replicating amplicon sequences from fastq or compressed fastq files, while also controlling peak memory requirement to support large files.
+# combines all identical sequencing reads into into “unique sequences” # with a corresponding “abundance”
+derepFs <- derepFastq(filtFs, verbose=TRUE)
+derepRs <- derepFastq(filtRs, verbose=TRUE)
+
+# Name the derep-class objects by the sample names
+names(derepFs) <- sampleNames #en fait il recoivent les nom des ech
+names(derepRs) <- sampleNames
+
+
+errF <- learnErrors(filtFs, multithread=TRUE) # error F ou R 
+errR <- learnErrors(filtRs, multithread=TRUE)
+# 33514080 total bases in 139642 reads from 20 samples will be used for #learning the error rates.
+#22342720 total bases in 139642 reads from 20 samples will be used for #learning the error rates.
+# --> ce sont les profil d'erreur
+
+plotErrors(errF)
+plotErrors(errR)
+# verify that the error rates
+# --> show the frequencies of each type of transition as a function of #the quality.
+#pour chacune des mutation posible: que A remplace A à une proba tres haute, ou C par C, T par T ......
+
+
+# pooling improves the detection of rare variants
+dadaFs <- dada(derepFs, err=errF, multithread=TRUE)
+dadaRs <- dada(derepRs, err=errR, multithread=TRUE)
+
+# Inspecting the dada-class object returned by dada:
+dadaFs[[1]]
+# 128 sequence variants were inferred from 1979 
+
+
+
+#Construct sequence table and remove chimeras
+# sequence table --> sample by sequence feature table valued by the 
+#number of times each sequence was observed in each sample.
+mergers <- mergePairs(dadaFs, derepFs, dadaRs, derepRs)
+# merge each denoised pair of forward and reverse reads, rejecting any pairs which do not 
+# sufficiently overlap or contain too many
+
+seqtabAll <- makeSequenceTable(mergers[!grepl("Mock", names(mergers))])
+table(nchar(getSequences(seqtabAll)))
+# 251 252 253 254 255 
+#  1  85 186   5   2
+# Notably, chimeras have not yet been removed
+
+seqtabNoC <- removeBimeraDenovo(seqtabAll)
+# chimerasmake up about 22% of the inferred sequence variants
+````
+
+````{r}
+# Assign taxonomy
+# --> dada2 package, va comparer les otu qu'ona fomer et va les identifier ?
+# --> cluster à 97% d'identifier
+
+#fastaRef <- "/home/rdp_train_set_16.fa.gz"
+#taxTab <- assignTaxonomy(seqtabNoC, refFasta = fastaRef, multithread=TRUE) 
+#unname(head(taxTab))
+
+#fastaRef <- "/home/ecogenomique2/ecogenomiqueM1MFAprojet/silva_nr99_v138.1_train_set.fa"
+fastaRef <- "/home/rstudio/silva_nr99_v138.1_train_set.fa"
+taxTab <- assignTaxonomy(seqtabNoC, refFasta = fastaRef, multithread=TRUE) 
+unname(head(taxTab))
+# on doit telecharger :   silva_nr99_v138.1_train_set.fa
+# faut le mettre sur la VM
+````
 
