--- a/ecogenomiquerdossier.Rmd
+++ b/ecogenomiquerdossier.Rmd
@@ -163,70 +163,122 @@ head(out)
 
 
 # Dereplication
-# la fonction de replicating amplicon sequences from fastq or compressed fastq files, while also controlling peak memory requirement to support large files.
-# combines all identical sequencing reads into into “unique sequences” # with a corresponding “abundance”
-derepFs <- derepFastq(filtFs, verbose=TRUE)
-derepRs <- derepFastq(filtRs, verbose=TRUE)
+  # la fonction de replicating amplicon sequences from fastq or compressed fastq files, while also controlling peak memory   requirement to support large files.
+  # combines all identical sequencing reads into into “unique sequences” # with a corresponding “abundance”
+  derepFs <- derepFastq(filtFs, verbose=TRUE)
+  derepRs <- derepFastq(filtRs, verbose=TRUE)
 
-# Name the derep-class objects by the sample names
-names(derepFs) <- sampleNames #en fait il recoivent les nom des ech
-names(derepRs) <- sampleNames
-
-
-errF <- learnErrors(filtFs, multithread=TRUE) # error F ou R 
-errR <- learnErrors(filtRs, multithread=TRUE)
-# 33514080 total bases in 139642 reads from 20 samples will be used for #learning the error rates.
-#22342720 total bases in 139642 reads from 20 samples will be used for #learning the error rates.
-# --> ce sont les profil d'erreur
-
-plotErrors(errF)
-plotErrors(errR)
-# verify that the error rates
-# --> show the frequencies of each type of transition as a function of #the quality.
-#pour chacune des mutation posible: que A remplace A à une proba tres haute, ou C par C, T par T ......
+  # Name the derep-class objects by the sample names
+  names(derepFs) <- sampleNames #en fait il recoivent les nom des ech
+  names(derepRs) <- sampleNames
 
 
-# pooling improves the detection of rare variants
-dadaFs <- dada(derepFs, err=errF, multithread=TRUE)
-dadaRs <- dada(derepRs, err=errR, multithread=TRUE)
+  errF <- learnErrors(filtFs, multithread=TRUE) # error F ou R 
+  errR <- learnErrors(filtRs, multithread=TRUE)
+  # 33514080 total bases in 139642 reads from 20 samples will be used for #learning the error rates.
+  #22342720 total bases in 139642 reads from 20 samples will be used for #learning the error rates.
+  # --> ce sont les profil d'erreur
+
+  plotErrors(errF)
+  plotErrors(errR)
+  # verify that the error rates
+  # --> show the frequencies of each type of transition as a function of #the quality.
+  #pour chacune des mutation posible: que A remplace A à une proba tres haute, ou C par C, T par T ......
+
+  # difference entre OTU (a cause erreur de seq, on a pleins de variant)
+  # si on retire variant, on a plus OTU, donc 2 unité ecologique proches sont considéré comme pareille
+
+  # pooling improves the detection of rare variants
+  dadaFs <- dada(derepFs, err=errF, multithread=TRUE)
+  dadaRs <- dada(derepRs, err=errR, multithread=TRUE)
 
 # Inspecting the dada-class object returned by dada:
-dadaFs[[1]]
-# 128 sequence variants were inferred from 1979 
+  
+  dadaFs[[1]] #liste de liste
+  # 128 sequence variants were inferred from 1979 
 
 
 
 #Construct sequence table and remove chimeras
-# sequence table --> sample by sequence feature table valued by the 
-#number of times each sequence was observed in each sample.
-mergers <- mergePairs(dadaFs, derepFs, dadaRs, derepRs)
-# merge each denoised pair of forward and reverse reads, rejecting any pairs which do not 
-# sufficiently overlap or contain too many
 
-seqtabAll <- makeSequenceTable(mergers[!grepl("Mock", names(mergers))])
-table(nchar(getSequences(seqtabAll)))
-# 251 252 253 254 255 
-#  1  85 186   5   2
-# Notably, chimeras have not yet been removed
+  # sequence table --> sample by sequence feature table valued by the 
+  # number of times each sequence was observed in each sample.
+  mergers <- mergePairs(dadaFs, derepFs, dadaRs, derepRs)
+  # merge each denoised pair of forward and reverse reads, rejecting any pairs which do not 
+  # sufficiently overlap or contain too many
+  
+  # cnostruction table seq qui resume combien de fois est obs chacun des asv
+  seqtabAll <- makeSequenceTable(mergers[!grepl("Mock", names(mergers))])
+  table(nchar(getSequences(seqtabAll)))
+  # 251 252 253 254 255 
+  #  1  85 186   5   2
+  # Notably, chimeras have not yet been removed
+  #nombre de fois dans lequel apparaissent echantillions
 
-seqtabNoC <- removeBimeraDenovo(seqtabAll)
-# chimerasmake up about 22% of the inferred sequence variants
+  seqtabNoC <- removeBimeraDenovo(seqtabAll)
+  # chimerasmake up about 22% of the inferred sequence variants
+  # but they are rare (4%)
+  seqtabNoC
 ````
 
 ````{r}
 # Assign taxonomy
-# --> dada2 package, va comparer les otu qu'ona fomer et va les identifier ?
-# --> cluster à 97% d'identifier
+  # --> dada2 package, va comparer les otu qu'ona fomer et va les identifier ?
+  # --> cluster à 97% d'identifier
 
-#fastaRef <- "/home/rdp_train_set_16.fa.gz"
-#taxTab <- assignTaxonomy(seqtabNoC, refFasta = fastaRef, multithread=TRUE) 
-#unname(head(taxTab))
 
-#fastaRef <- "/home/ecogenomique2/ecogenomiqueM1MFAprojet/silva_nr99_v138.1_train_set.fa"
-fastaRef <- "/home/rstudio/silva_nr99_v138.1_train_set.fa"
-taxTab <- assignTaxonomy(seqtabNoC, refFasta = fastaRef, multithread=TRUE) 
-unname(head(taxTab))
-# on doit telecharger :   silva_nr99_v138.1_train_set.fa
-# faut le mettre sur la VM
+  # on doit telecharger :   silva_nr99_v138.1_train_set.fa
+  # faut le mettre sur la VM
+
+  #fastaRef <- "/home/rdp_train_set_16.fa.gz"
+  #taxTab <- assignTaxonomy(seqtabNoC, refFasta = fastaRef, multithread=TRUE) 
+  #unname(head(taxTab))
+
+  #fastaRef <- "/home/ecogenomique2/ecogenomiqueM1MFAprojet/silva_nr99_v138.1_train_set.fa"
+  fastaRef <- "/home/rstudio/silva_nr99_v138.1_train_set.fa"
+  taxTab <- assignTaxonomy(seqtabNoC, refFasta = fastaRef, multithread=TRUE) 
+  unname(head(taxTab))
+  taxTab
+  
 ````
+
+````{r}
+#Construct phylogenetic tree
+
+  #calculation of phylogeny-aware distances between microbial communities
+  seqs <- getSequences(seqtabNoC) # fonction de dada 2 qui recup seq ds seqtaNoC auquel ont a enelevé les chimere
+  # montre niv occurence de chaque ech
+  # table d'obs
+
+  names(seqs) <- seqs # This propagates to the tip labels of the tree
+  alignment <- AlignSeqs(DNAStringSet(seqs), anchor=NA,verbose=FALSE)
+
+  # The phangorn R package is then used to construct a phylogenetic tree
+  phangAlign <- phyDat(as(alignment, "matrix"), type="DNA")
+  dm <- dist.ml(phangAlign)
+  treeNJ <- NJ(dm) # Note, tip order != sequence order
+  fit = pml(treeNJ, data=phangAlign)
+  fitGTR <- update(fit, k=4, inv=0.2)
+  fitGTR <- optim.pml(fitGTR, model="GTR", optInv=TRUE, optGamma=TRUE,
+        rearrangement = "stochastic", control = pml.control(trace = 0))
+     detach("package:phangorn", unload=TRUE)
+  fitGTR
+  
+  
+    #Rate matrix:
+   # a c g t
+  #a 0 1 1 1
+  #c 1 0 1 1
+  #g 1 1 0 1
+  #t 1 1 1 0
+
+  #Base frequencies:  
+  #0.25 0.25 0.25 0.25
+  
+  
+  
+````
+
+
+
 
