--- a/ecogenomiquerdossier.Rmd
+++ b/ecogenomiquerdossier.Rmd
@@ -144,9 +144,7 @@ filtRs <- file.path(filt_path, paste0(sampleNames, "_R_filt.fastq.gz"))
 # dans ce cas le filtering is performed on the forward and reverse reads independently, and both reads must pass for the read pair to be output.
 
 
-out <- filterAndTrim(fnFs, filtFs, fnRs, filtRs, truncLen=c(240,160),
-              maxN=0, maxEE=c(2,2), truncQ=2, rm.phix=TRUE,
-              compress=TRUE, multithread=TRUE) 
+out <- filterAndTrim(fnFs, filtFs, fnRs, filtRs, truncLen=c(240,160), maxN=0, maxEE=c(2,2),truncQ=2, rm.phix=TRUE,compress=TRUE, multithread=TRUE)
 # out filte et compresse tous ca dans le fichier
 
 # On Windows set multithread=FALSE
@@ -191,14 +189,17 @@ head(out)
   # pooling improves the detection of rare variants
   dadaFs <- dada(derepFs, err=errF, multithread=TRUE)
   dadaRs <- dada(derepRs, err=errR, multithread=TRUE)
+````
 
+````{r}  
+  
 # Inspecting the dada-class object returned by dada:
   
   dadaFs[[1]] #liste de liste
   # 128 sequence variants were inferred from 1979 
+````
 
-
-
+````{r}
 #Construct sequence table and remove chimeras
 
   # sequence table --> sample by sequence feature table valued by the 
@@ -349,6 +350,8 @@ head(out)
 ````
 
 
+
+
 ```{r}
 .cran_packages <- c( "shiny","miniUI", "caret", "pls", "e1071", "ggplot2", "randomForest", "dplyr", "ggrepel", "nlme", "devtools",
                   "reshape2", "PMA", "structSSI", "ade4",
@@ -377,21 +380,133 @@ if(any(!.inst)){BiocManager::install(.bioc_packages[!.inst])
 }
 ```
 
-premiere note:
-Faire jusque ordination
-;md est interpreté par github comme page web
-#titre
-##sous titre
-###sous sous titre
-mettre dans 2 script separé instalation des package(library/sapply) et l'autre 
-car il faut pas refaire instalation des packages
 
-2 eme note:
-exercice: influence saisons et profondeur sur microbiote (voir slack)
 
-3eme note:
-donnée de l'article qu'on a presenter
-https://www.ebi.ac.uk/ena/browser/view/SRX6374530?show=reads
-hhh
+```{r}
+# Prevalence Filtering
+
+  # Subset to the remaining phyla
+# Include a guess for parameter
+prevdf1 = subset(prevdf, Phylum %in% get_taxa_unique(ps1, "Phylum"))
+
+ggplot(prevdf1, aes(TotalAbundance, Prevalence / nsamples(ps),color=Phylum)) + geom_hline(yintercept = 0.05, alpha = 0.5, linetype = 2) +  geom_point(size = 2, alpha = 0.7) + scale_x_log10() +  xlab("Total Abundance") + ylab("Prevalence [Frac. Samples]") + facet_wrap(~Phylum) + theme(legend.position="none")
+
+
+
+  # Define prevalence threshold as 5% of total samples
+  prevalenceThreshold = 0.05 * nsamples(ps)
+  prevalenceThreshold
+  # Execute prevalence filter, using `prune_taxa()` function
+  keepTaxa = rownames(prevdf1)[(prevdf1$Prevalence >= prevalenceThreshold)]
+  ps2 = prune_taxa(keepTaxa, ps)
+  
+  
+# Agglomerate taxa
+  # How many genera would be present after filtering?
+  length(get_taxa_unique(ps2, taxonomic.rank = "Genus"))
+  ps3 = tax_glom(ps2, "Genus", NArm = TRUE)
+  
+  h1 = 0.4
+  ps4 = tip_glom(ps2, h = h1)
+  multiPlotTitleTextSize = 15
+  p2tree = plot_tree(ps2, method = "treeonly",ladderize = "left",title = "Before Agglomeration") + theme(plot.title = element_text(size = multiPlotTitleTextSize)) 
+  p3tree = plot_tree(ps3, method = "treeonly", ladderize = "left", title = "By Genus") + theme(plot.title = element_text(size = multiPlotTitleTextSize))
+  p4tree = plot_tree(ps4, method = "treeonly",ladderize = "left", title = "By Height") + theme(plot.title = element_text(size = multiPlotTitleTextSize))
+  
+  grid.arrange(nrow = 1, p2tree, p3tree, p4tree)
+``` 
+
+
+
+
+```{r}  
+# Abundance value transformation
+  
+
+  # Arbitrary subset, based on Phylum, for plotting
+
+  plot_abundance = function(physeq,title = "", Facet = "Order", Color = "Phylum"){
+      p1f = subset_taxa(physeq, Phylum %in% c("Firmicutes"))
+      mphyseq = psmelt(p1f)
+      mphyseq <- subset(mphyseq, Abundance > 0)
+     ggplot(data = mphyseq, mapping = aes_string(x = "sex",y = "Abundance",color = Color, fill = Color)) +geom_violin(fill = NA) + geom_point(size = 1, alpha = 0.3, position = position_jitter(width = 0.3)) + facet_wrap(facets = Facet) + scale_y_log10()+ theme(legend.position="none")
+  }
+
+```
+ 
+ 
+```{r}
+  
+  # Transform to relative abundance. Save as new object.
+  ps3ra = transform_sample_counts(ps3, function(x){x / sum(x)})
+
+  plotBefore = plot_abundance(ps3,"")
+  plotAfter = plot_abundance(ps3ra,"")
+  # Combine each plot into one graphic.
+  grid.arrange(nrow = 2,  plotBefore, plotAfter)
+```
+
+
+```{r}  
+  
+# Subset by taxonomy
+  psOrd = subset_taxa(ps3ra, Order == "Lactobacillales")
+  plot_abundance(psOrd, Facet = "Genus", Color = NULL)
+  
+
+  
+```
+
+```{r}
+#Preprocessing
+  qplot(sample_data(ps)$age, geom = "histogram",binwidth=20) + xlab("age")
+  qplot(log10(rowSums(otu_table(ps))),binwidth=0.2) +
+  xlab("Logged counts-per-sample")
+  
+  
+  sample_data(ps)$age_binned <- cut(sample_data(ps)$age,breaks = c(0, 100, 200, 400))
+levels(sample_data(ps)$age_binned) <- list(Young100="(0,100]", Mid100to200="(100,200]", Old200="(200,400]")
+sample_data(ps)$family_relationship=gsub(" ","",sample_data(ps)$family_relationship)
+pslog <- transform_sample_counts(ps, function(x) log(1 + x))
+out.wuf.log <- ordinate(pslog, method = "MDS", distance = "wunifrac")
+evals <- out.wuf.log$values$Eigenvalues
+plot_ordination(pslog, out.wuf.log, color = "age_binned") + labs(col = "Binned Age") +coord_fixed(sqrt(evals[2] / evals[1]))
+  
+rel_abund <- t(apply(otu_table(ps), 1, function(x) x / sum(x)))
+qplot(rel_abund[, 12], geom = "histogram",binwidth=0.05) +
+  xlab("Relative abundance")
+
+
+```
+
+```{r}
+# Different Ordination Projections
+
+outliers <- c("F5D165", "F6D165", "M3D175", "M4D175", "M5D175", "M6D175")
+ps <- prune_samples(!(sample_names(ps) %in% outliers), ps)
+
+which(!rowSums(otu_table(ps)) > 1000)
+
+ps <- prune_samples(rowSums(otu_table(ps)) > 1000, ps)
+pslog <- transform_sample_counts(ps, function(x) log(1 + x))
+
+out.pcoa.log <- ordinate(pslog,  method = "MDS", distance = "bray")
+evals <- out.pcoa.log$values[,1]
+plot_ordination(pslog, out.pcoa.log, color = "age_binned",
+                  shape = "family_relationship") +
+  labs(col = "Binned Age", shape = "Litter")+
+  coord_fixed(sqrt(evals[2] / evals[1]))
+
+out.dpcoa.log <- ordinate(pslog, method = "DPCoA")
+evals <- out.dpcoa.log$eig
+plot_ordination(pslog, out.dpcoa.log, color = "age_binned", label= "SampleID",
+                  shape = "family_relationship") +
+  labs(col = "Binned Age", shape = "Litter")+
+  coord_fixed(sqrt(evals[2] / evals[1]))
+
+
+# Supervised learning
+#--> faire jusque la (non compris) 
+```
 
 
