--- a/ecogenomiquerdossier.Rmd
+++ b/ecogenomiquerdossier.Rmd
@@ -4,36 +4,51 @@ output: github_document
 ---
 
 ```{bash}
-sudo apt-get update -y
-sudo apt-get install -y libglpk-dev 
-sudo apt-get install -y liblzma-dev libbz2-dev
-```
-
-```{r}
-# package de r-studio
-if (!requireNamespace("BiocManager", quietly = TRUE))
-    install.packages("BiocManager")
-BiocManager::install("BiocStyle")
-BiocManager::install("Rhtslib")
-#biocmanager est un site de depot, les pakages depedent d'autres packages et biomarqueur regle tous pour nous
-# on verif que tous a ete installé et on instale d'autre trucs
+#sudo apt-get update -y
+#sudo apt-get install -y libglpk-dev 
+#sudo apt-get install -y liblzma-dev libbz2-dev
 ```
 
 ```{r}
 library("knitr")
 library("BiocStyle")
 .cran_packages <- c("ggplot2", "gridExtra", "devtools")
-install.packages(.cran_packages) 
+
 .bioc_packages <- c("dada2", "phyloseq", "DECIPHER", "phangorn")
-BiocManager::install(.bioc_packages)
-# Load packages into session, and print package version
 sapply(c(.cran_packages, .bioc_packages), require, character.only = TRUE)
+
+.cran_packages <- c( "shiny","miniUI", "caret", "pls", "e1071", "ggplot2", "randomForest", "dplyr", "ggrepel", "nlme", "devtools",
+                  "reshape2", "PMA", "structSSI", "ade4",
+                  "ggnetwork", "intergraph", "scales")
+.github_packages <- c("jfukuyama/phyloseqGraphTest")
+.bioc_packages <- c("genefilter", "impute")
+```
+
+```{r}
+# package de r-studio
+#if (!requireNamespace("BiocManager", quietly = TRUE))
+#    install.packages("BiocManager")
+#BiocManager::install("BiocStyle")
+#BiocManager::install("Rhtslib")
+#biocmanager est un site de depot, les pakages depedent d'autres packages et biomarqueur regle tous pour nous
+# on verif que tous a ete installé et on instale d'autre trucs
+```
+
+```{r}
+#library("knitr")
+#library("BiocStyle")
+#.cran_packages <- c("ggplot2", "gridExtra", "devtools")
+#install.packages(.cran_packages) 
+#.bioc_packages <- c("dada2", "phyloseq", "DECIPHER", "phangorn")
+#BiocManager::install(.bioc_packages)
+# Load packages into session, and print package version
+#sapply(c(.cran_packages, .bioc_packages), require, character.only = TRUE)
 ```
 
 ```{bash}
-cd~
-wget https://mothur.s3.us-east-2.amazonaws.com/wiki/miseqsopdata.zip
-unzip miseqsopdata.zip
+#cd~
+#wget https://mothur.s3.us-east-2.amazonaws.com/wiki/miseqsopdata.zip
+#unzip miseqsopdata.zip
 ```
 
 ````{r}
@@ -170,7 +185,9 @@ head(out)
   names(derepFs) <- sampleNames #en fait il recoivent les nom des ech
   names(derepRs) <- sampleNames
 
+````
 
+````{r}
   errF <- learnErrors(filtFs, multithread=TRUE) # error F ou R 
   errR <- learnErrors(filtRs, multithread=TRUE)
   # 33514080 total bases in 139642 reads from 20 samples will be used for #learning the error rates.
@@ -353,31 +370,29 @@ head(out)
 
 
 ```{r}
-.cran_packages <- c( "shiny","miniUI", "caret", "pls", "e1071", "ggplot2", "randomForest", "dplyr", "ggrepel", "nlme", "devtools",
-                  "reshape2", "PMA", "structSSI", "ade4",
-                  "ggnetwork", "intergraph", "scales")
-.github_packages <- c("jfukuyama/phyloseqGraphTest")
-.bioc_packages <- c("genefilter", "impute")
+#.cran_packages <- c( "shiny","miniUI", "caret", "pls", "e1071", "ggplot2", "randomForest", "dplyr", "ggrepel", "nlme", "devtools","reshape2", "PMA", "structSSI", "ade4","ggnetwork", "intergraph", "scales")
+#.github_packages <- c("jfukuyama/phyloseqGraphTest")
+#.bioc_packages <- c("genefilter", "impute")
 ```
 
 ```{r}
-.inst <- .cran_packages %in% installed.packages()
-if (any(!.inst)){
-  install.packages(.cran_packages[!.inst],repos = "http://cran.rstudio.com/")
-}
+#.inst <- .cran_packages %in% installed.packages()
+#if (any(!.inst)){
+#  install.packages(.cran_packages[!.inst],repos = "http://cran.rstudio.com/")
+#}
 ```
 
 ```{r}
-.inst <- .github_packages %in% installed.packages()
-if (any(!.inst)){
-  devtools::install_github(.github_packages[!.inst])
-}
+#.inst <- .github_packages %in% installed.packages()
+#if (any(!.inst)){
+#  devtools::install_github(.github_packages[!.inst])
+#}
 ```
 
 ```{r}
-.inst <- .bioc_packages %in% installed.packages()
-if(any(!.inst)){BiocManager::install(.bioc_packages[!.inst])
-}
+#.inst <- .bioc_packages %in% installed.packages()
+#if(any(!.inst)){BiocManager::install(.bioc_packages[!.inst])
+#}
 ```
 
 
@@ -489,24 +504,132 @@ which(!rowSums(otu_table(ps)) > 1000)
 
 ps <- prune_samples(rowSums(otu_table(ps)) > 1000, ps)
 pslog <- transform_sample_counts(ps, function(x) log(1 + x))
+```
 
+```{r}
 out.pcoa.log <- ordinate(pslog,  method = "MDS", distance = "bray")
 evals <- out.pcoa.log$values[,1]
-plot_ordination(pslog, out.pcoa.log, color = "age_binned",
-                  shape = "family_relationship") +
-  labs(col = "Binned Age", shape = "Litter")+
-  coord_fixed(sqrt(evals[2] / evals[1]))
+plot_ordination(pslog, out.pcoa.log, color = "age_binned", shape = "family_relationship") + labs(col = "Binned Age", shape = "Litter")+ coord_fixed(sqrt(evals[2] / evals[1]))
 
 out.dpcoa.log <- ordinate(pslog, method = "DPCoA")
 evals <- out.dpcoa.log$eig
-plot_ordination(pslog, out.dpcoa.log, color = "age_binned", label= "SampleID",
-                  shape = "family_relationship") +
-  labs(col = "Binned Age", shape = "Litter")+
-  coord_fixed(sqrt(evals[2] / evals[1]))
+plot_ordination(pslog, out.dpcoa.log, color = "age_binned", label= "SampleID", shape = "family_relationship") + labs(col = "Binned Age", shape = "Litter")+ coord_fixed(sqrt(evals[2] / evals[1]))
 
+```
 
-# Supervised learning
-#--> faire jusque la (non compris) 
+```{r}
+
+plot_ordination(pslog, out.dpcoa.log, type = "species", color = "Phylum") + coord_fixed(sqrt(evals[2] / evals[1]))
+
+out.wuf.log <- ordinate(pslog, method = "PCoA", distance ="wunifrac")
+evals <- out.wuf.log$values$Eigenvalues
+plot_ordination(pslog, out.wuf.log, color = "age_binned",
+                  shape = "family_relationship") + coord_fixed(sqrt(evals[2] / evals[1])) + labs(col = "Binned Age", shape = "Litter")
+
+```
+
+Why are the ordination plots so far from square?
+Aspect ratio of ordination plots
+PCA on ranks
+```{r}
+
+abund <- otu_table(pslog)
+abund_ranks <- t(apply(abund, 1, rank))
+
+abund_ranks <- abund_ranks - 329
+abund_ranks[abund_ranks < 1] <- 1
+```
+
+```{r}
+library(dplyr)
+library(reshape2)
+abund_df <- melt(abund, value.name = "abund") %>%
+  left_join(melt(abund_ranks, value.name = "rank"))
+colnames(abund_df) <- c("sample", "seq", "abund", "rank")
+
+abund_df <- melt(abund, value.name = "abund") %>%
+  left_join(melt(abund_ranks, value.name = "rank"))
+colnames(abund_df) <- c("sample", "seq", "abund", "rank")
+
+sample_ix <- sample(1:nrow(abund_df), 8)
+ggplot(abund_df %>%
+         filter(sample %in% abund_df$sample[sample_ix])) +geom_point(aes(x = abund, y = rank, col = sample),
+             position = position_jitter(width = 0.2), size = 1.5) +labs(x = "Abundance", y = "Thresholded rank") + scale_color_brewer(palette = "Set2")
 ```
 
 
+
+A PARTIR DE LA CA FONCTIONNE PLUS
+
+
+```{r}
+
+library(ade4)
+ranks_pca <- dudi.pca(abund_ranks, scannf = F, nf = 3)
+row_scores <- data.frame(li = ranks_pca$li,SampleID = rownames(abund_ranks))
+col_scores <- data.frame(co = ranks_pca$co,seq = colnames(abund_ranks))
+
+tax <- tax_table(ps) %>%
+  data.frame(stringsAsFactors = FALSE)
+tax$seq <- rownames(tax)
+main_orders <- c("Clostridiales", "Bacteroidales", "Lactobacillales",
+                 "Coriobacteriales")
+tax$Order[!(tax$Order %in% main_orders)] <- "Other"
+tax$Order <- factor(tax$Order, levels = c(main_orders, "Other"))
+tax$otu_id <- seq_len(ncol(otu_table(ps)))
+row_scores <- row_scores %>%
+  left_join(sample_data(pslog))
+col_scores <- col_scores %>%
+  left_join(tax)
+
+```
+
+
+```{r}
+evals_prop <- 100 * (ranks_pca$eig / sum(ranks_pca$eig))
+ggplot() +
+  geom_point(data = row_scores, aes(x = li.Axis1, y = li.Axis2), shape = 2) +
+  geom_point(data = col_scores, aes(x = 25 * co.Comp1, y = 25 * co.Comp2, col = Order),
+             size = .3, alpha = 0.6) +
+  scale_color_brewer(palette = "Set2") +
+  facet_grid(~ age_binned) +
+  guides(col = guide_legend(override.aes = list(size = 3))) +
+  labs(x = sprintf("Axis1 [%s%% variance]", round(evals_prop[1], 2)),
+       y = sprintf("Axis2 [%s%% variance]", round(evals_prop[2], 2))) +
+  coord_fixed(sqrt(ranks_pca$eig[2] / ranks_pca$eig[1])) +
+  theme(panel.border = element_rect(color = "#787878", fill = alpha("white", 0)))
+```
+
+
+```{r}
+
+ps_ccpna <- ordinate(pslog, "CCA", formula = pslog ~ age_binned + family_relationship)
+
+
+library(ggrepel)
+ps_scores <- vegan::scores(ps_ccpna)
+sites <- data.frame(ps_scores$sites)
+sites$SampleID <- rownames(sites)
+sites <- sites %>%
+  left_join(sample_data(ps))
+
+species <- data.frame(ps_scores$species)
+species$otu_id <- seq_along(colnames(otu_table(ps)))
+species <- species %>%
+  left_join(tax)
+evals_prop <- 100 * ps_ccpna$CCA$eig[1:2] / sum(ps_ccpna$CA$eig)
+ggplot() +
+  geom_point(data = sites, aes(x = CCA1, y = CCA2), shape = 2, alpha = 0.5) +
+  geom_point(data = species, aes(x = CCA1, y = CCA2, col = Order), size = 0.5) +
+  geom_text_repel(data = species %>% filter(CCA2 < -2),
+                    aes(x = CCA1, y = CCA2, label = otu_id),
+            size = 1.5, segment.size = 0.1) +
+  facet_grid(. ~ family_relationship) +
+  guides(col = guide_legend(override.aes = list(size = 3))) +
+  labs(x = sprintf("Axis1 [%s%% variance]", round(evals_prop[1], 2)),
+        y = sprintf("Axis2 [%s%% variance]", round(evals_prop[2], 2))) +
+  scale_color_brewer(palette = "Set2") +
+  coord_fixed(sqrt(ps_ccpna$CCA$eig[2] / ps_ccpna$CCA$eig[1])*0.45   ) +
+  theme(panel.border = element_rect(color = "#787878", fill = alpha("white", 0)))
+
+```
