--- a/ecogenomiquerdossier.Rmd
+++ b/ecogenomiquerdossier.Rmd
@@ -51,27 +51,27 @@ sapply(c(.cran_packages, .bioc_packages), require, character.only = TRUE)
 #unzip miseqsopdata.zip
 ```
 
-````{r}
+```{r}
 set.seed(100)
 miseq_path <- "./MiSeq_SOP" 
 list.files(miseq_path)
-````
+```
 
-````{r}
+```{r}
 set.seed(100)
 miseq_path <- "/home/rstudio/MiSeq_SOP"
 list.files(miseq_path)
-````
+```
 
-````{r}
+```{r}
 # Si on quite R(pas R studio) il faut run ca pour qu'il ait bien les packages
 .cran_packages <- c("ggplot2", "gridExtra", "devtools")
 .bioc_packages <- c("dada2", "phyloseq", "DECIPHER", "phangorn")
 sapply(c(.cran_packages, .bioc_packages), require, character.only = TRUE)
-````
+```
 
 
-````{r}
+```{r}
 # Sort to unsure foward and reverse reads are in the same order
 
 fnFs <- sort(list.files(miseq_path, pattern="_R1_001.fastq"))
@@ -88,17 +88,17 @@ sampleNames <- sapply(strsplit(fnFs, "_"), `[`, 1)
 # contruire un chemin vers fichier à partir de composant, independant de la plateforme
 fnFs <- file.path(miseq_path, fnFs)
 fnRs <- file.path(miseq_path, fnRs)
-````
+```
 
-````{r}
+```{r}
 fnFs[1:3] #affiches les 3 premier elements de fnFs
 fnRs[1:3]
-````
+```
 
 
 Most Illumina sequencing data shows a trend of decreasing average quality towards the end of sequencing reads.
 The first two forward reads:
-````{r}
+```{r}
 # va lire les 2 premiers elements en Foward
 plotQualityProfile(fnFs[1:2])
 # score de qualité
@@ -130,9 +130,9 @@ plotQualityProfile(fnRs[1:2])
 #We also choose to trim the first 10 nucleotides of each read based on empirical observations across many Illumina #datasets that these base positions are particularly likely to contain pathological errors.
 #la fonction plotQualityProfile s'en charge
 
-````
+```
 
-````{r}
+```{r}
 
 #We define the filenames for the filtered fastq.gz files:
 
@@ -147,9 +147,9 @@ if(!file_test("-d", filt_path))
 
 filtFs <- file.path(filt_path, paste0(sampleNames, "_F_filt.fasta.gz")) #filtered path pour les fowards, on cherche le filtered path et on trie par le nom du sample
 filtRs <- file.path(filt_path, paste0(sampleNames, "_R_filt.fastq.gz"))
-````
+```
 
-````{r}
+```{r}
 # combine trimming parameters with standard filtering parameters
 
 # Filter the forward and reverse reads:
@@ -164,10 +164,10 @@ out <- filterAndTrim(fnFs, filtFs, fnRs, filtRs, truncLen=c(240,160), maxN=0, ma
 
 # On Windows set multithread=FALSE
 head(out)
-````
+```
 
 
-````{r}
+```{r}
 # Infer sequence variants
 
   #  high-resolution DADA2 method
@@ -185,9 +185,9 @@ head(out)
   names(derepFs) <- sampleNames #en fait il recoivent les nom des ech
   names(derepRs) <- sampleNames
 
-````
+```
 
-````{r}
+```{r}
   errF <- learnErrors(filtFs, multithread=TRUE) # error F ou R 
   errR <- learnErrors(filtRs, multithread=TRUE)
   # 33514080 total bases in 139642 reads from 20 samples will be used for #learning the error rates.
@@ -206,17 +206,17 @@ head(out)
   # pooling improves the detection of rare variants
   dadaFs <- dada(derepFs, err=errF, multithread=TRUE)
   dadaRs <- dada(derepRs, err=errR, multithread=TRUE)
-````
+```
 
-````{r}  
+```{r}  
   
 # Inspecting the dada-class object returned by dada:
   
   dadaFs[[1]] #liste de liste
   # 128 sequence variants were inferred from 1979 
-````
+```
 
-````{r}
+```{r}
 #Construct sequence table and remove chimeras
 
   # sequence table --> sample by sequence feature table valued by the 
@@ -237,9 +237,9 @@ head(out)
   # chimerasmake up about 22% of the inferred sequence variants
   # but they are rare (4%)
   seqtabNoC
-````
+```
 
-````{r}
+```{r}
 # Assign taxonomy
   # --> dada2 package, va comparer les otu qu'ona fomer et va les identifier ?
   # --> cluster à 97% d'identifier
@@ -258,9 +258,9 @@ head(out)
   unname(head(taxTab))
   taxTab
   
-````
+```
 
-````{r}
+```{r}
 #Construct phylogenetic tree
 
   #calculation of phylogeny-aware distances between microbial communities
@@ -294,10 +294,15 @@ head(out)
   
   plot(fitGTR)
 
-````
+```
 
+```{r}
+ps_connect <-url("https://raw.githubusercontent.com/spholmes/F1000_workflow/master/data/ps.rds")
+ps = readRDS(ps_connect)
+ps
+```
 
-````{r}
+```{r}
 # Combine data into a phyloseq object
 
   samdf <- read.csv("https://raw.githubusercontent.com/spholmes/F1000_workflow/master/data/MIMARKS_Data_combined.csv",header=TRUE)
@@ -310,6 +315,8 @@ head(out)
   rownames(samdf) <- samdf$SampleID
   keep.cols <- c("collection_date", "biome", "target_gene", "target_subfragment","host_common_name", "host_subject_id", "age", "sex", "body_product", "tot_mass", "diet", "family_relationship", "genotype", "SampleID") 
   samdf <- samdf[rownames(seqtabAll), keep.cols]
+```
+  
 
   #The full suite of data for this study – the sample-by-sequence feature table, the sample metadata, 
   #the sequence taxonomies, and the phylogenetic tree – can now be combined into a single object.
@@ -324,10 +331,10 @@ head(out)
     ## sample_data() Sample Data:       [ 19 samples by 14 sample variables ]
     ## tax_table()   Taxonomy Table:    [ 215 taxa by 6 taxonomic ranks ]
      ## phy_tree()    Phylogenetic Tree: [ 215 tips and 213 internal nodes ]
-````
 
 
-````{r}
+
+```{r}
 # Using phyloseq
   # phyloseq is an R package 
   # table metadonnées des OTU
@@ -364,7 +371,7 @@ head(out)
       ps1
       
       
-````
+```
 
 
 
@@ -406,7 +413,9 @@ prevdf1 = subset(prevdf, Phylum %in% get_taxa_unique(ps1, "Phylum"))
 
 ggplot(prevdf1, aes(TotalAbundance, Prevalence / nsamples(ps),color=Phylum)) + geom_hline(yintercept = 0.05, alpha = 0.5, linetype = 2) +  geom_point(size = 2, alpha = 0.7) + scale_x_log10() +  xlab("Total Abundance") + ylab("Prevalence [Frac. Samples]") + facet_wrap(~Phylum) + theme(legend.position="none")
 
+```
 
+```{r}
 
   # Define prevalence threshold as 5% of total samples
   prevalenceThreshold = 0.05 * nsamples(ps)
@@ -414,8 +423,9 @@ ggplot(prevdf1, aes(TotalAbundance, Prevalence / nsamples(ps),color=Phylum)) + g
   # Execute prevalence filter, using `prune_taxa()` function
   keepTaxa = rownames(prevdf1)[(prevdf1$Prevalence >= prevalenceThreshold)]
   ps2 = prune_taxa(keepTaxa, ps)
-  
-  
+``` 
+ 
+```{r} 
 # Agglomerate taxa
   # How many genera would be present after filtering?
   length(get_taxa_unique(ps2, taxonomic.rank = "Genus"))
@@ -563,9 +573,8 @@ A PARTIR DE LA CA FONCTIONNE PLUS
 
 
 ```{r}
-
 library(ade4)
-ranks_pca <- dudi.pca(abund_ranks, scannf = F, nf = 3)
+ranks_pca <- dudi.pca(abund_ranks, scannf = FALSE, nf = 3)
 row_scores <- data.frame(li = ranks_pca$li,SampleID = rownames(abund_ranks))
 col_scores <- data.frame(co = ranks_pca$co,seq = colnames(abund_ranks))
 
