--- a/ecogenomiquerdossier.Rmd
+++ b/ecogenomiquerdossier.Rmd
@@ -5,7 +5,11 @@ output: github_document
 
 #Workflow for Microbiome Data Analysis: from raw reads to community analyses.
 
+Margaux BONNARDOT
+M1 MFA
+
 ##Methods
+
 ###Amplicon bioinformatics: from raw reads to tables
 
 ```{bash, include = FALSE}
@@ -73,10 +77,10 @@ list.files(miseq_path)
 # Si on quite R(pas R studio) il faut run ca pour qu'il ait bien les packages
 ```
 
-```{r}
-.cran_packages <- c("ggplot2", "gridExtra", "devtools")
-.bioc_packages <- c("dada2", "phyloseq", "DECIPHER", "phangorn")
-sapply(c(.cran_packages, .bioc_packages), require, character.only = TRUE)
+```{r, include=FALSE}
+#.cran_packages <- c("ggplot2", "gridExtra", "devtools")
+#.bioc_packages <- c("dada2", "phyloseq", "DECIPHER", "phangorn")
+#sapply(c(.cran_packages, .bioc_packages), require, character.only = TRUE)
 ```
 
 ###Filter and Trim
@@ -674,33 +678,19 @@ ranks_pca <- dudi.pca(abund_ranks, scannf = FALSE, nf = 3)
 row_scores <- data.frame(li = ranks_pca$li,SampleID = rownames(abund_ranks))
 col_scores <- data.frame(co = ranks_pca$co,seq = colnames(abund_ranks))
 
-tax <- tax_table(ps) %>%
-  data.frame(stringsAsFactors = FALSE)
+tax <- tax_table(ps) %>% data.frame(stringsAsFactors = FALSE)
 tax$seq <- rownames(tax)
-main_orders <- c("Clostridiales", "Bacteroidales", "Lactobacillales",
-                 "Coriobacteriales")
+main_orders <- c("Clostridiales", "Bacteroidales", "Lactobacillales", "Coriobacteriales")
 tax$Order[!(tax$Order %in% main_orders)] <- "Other"
 tax$Order <- factor(tax$Order, levels = c(main_orders, "Other"))
 tax$otu_id <- seq_len(ncol(otu_table(ps)))
-row_scores <- row_scores %>%
-  left_join(sample_data(pslog))
-col_scores <- col_scores %>%
-  left_join(tax)
+row_scores <- row_scores %>% left_join(sample_data(pslog))
+col_scores <- col_scores %>% left_join(tax)
 ```
 
 ```{r}
 evals_prop <- 100 * (ranks_pca$eig / sum(ranks_pca$eig))
-ggplot() +
-  geom_point(data = row_scores, aes(x = li.Axis1, y = li.Axis2), shape = 2) +
-  geom_point(data = col_scores, aes(x = 25 * co.Comp1, y = 25 * co.Comp2, col = Order),
-             size = .3, alpha = 0.6) +
-  scale_color_brewer(palette = "Set2") +
-  facet_grid(~ age_binned) +
-  guides(col = guide_legend(override.aes = list(size = 3))) +
-  labs(x = sprintf("Axis1 [%s%% variance]", round(evals_prop[1], 2)),
-       y = sprintf("Axis2 [%s%% variance]", round(evals_prop[2], 2))) +
-  coord_fixed(sqrt(ranks_pca$eig[2] / ranks_pca$eig[1])) +
-  theme(panel.border = element_rect(color = "#787878", fill = alpha("white", 0)))
+ggplot() + geom_point(data = row_scores, aes(x = li.Axis1, y = li.Axis2), shape = 2) + geom_point(data = col_scores, aes(x = 25 * co.Comp1, y = 25 * co.Comp2, col = Order), size = .3, alpha = 0.6) + scale_color_brewer(palette = "Set2") + facet_grid(~ age_binned) + guides(col = guide_legend(override.aes = list(size = 3))) + labs(x = sprintf("Axis1 [%s%% variance]", round(evals_prop[1], 2)), y = sprintf("Axis2 [%s%% variance]", round(evals_prop[2], 2))) + coord_fixed(sqrt(ranks_pca$eig[2] / ranks_pca$eig[1])) + theme(panel.border = element_rect(color = "#787878", fill = alpha("white", 0)))
 ```
 
 ####Canonical correspondence
@@ -714,13 +704,11 @@ library(ggrepel)
 ps_scores <- vegan::scores(ps_ccpna)
 sites <- data.frame(ps_scores$sites)
 sites$SampleID <- rownames(sites)
-sites <- sites %>%
-  left_join(sample_data(ps))
+sites <- sites %>% left_join(sample_data(ps))
 
 species <- data.frame(ps_scores$species)
 species$otu_id <- seq_along(colnames(otu_table(ps)))
-species <- species %>%
-  left_join(tax)
+species <- species %>% left_join(tax)
 evals_prop <- 100 * ps_ccpna$CCA$eig[1:2] / sum(ps_ccpna$CA$eig)
 ggplot() + geom_point(data = sites, aes(x = CCA1, y = CCA2), shape = 2, alpha = 0.5) + geom_point(data = species, aes(x = CCA1, y = CCA2, col = Order), size = 0.5) + geom_text_repel(data = species %>% filter(CCA2 < -2), aes(x = CCA1, y = CCA2, label = otu_id), size = 1.5, segment.size = 0.1) + facet_grid(. ~ family_relationship) + guides(col = guide_legend(override.aes = list(size = 3))) + labs(x = sprintf("Axis1 [%s%% variance]", round(evals_prop[1], 2)), y = sprintf("Axis2 [%s%% variance]", round(evals_prop[2], 2))) + scale_color_brewer(palette = "Set2") + coord_fixed(sqrt(ps_ccpna$CCA$eig[2] / ps_ccpna$CCA$eig[1])*0.45   ) + theme(panel.border = element_rect(color = "#787878", fill = alpha("white", 0)))
 ```
